load("//:build_tools/vars.bzl", "LUACFLAGS", "LUALIBS", "PTT_WARN")

TAGS = [
    "exclusive",
]

VISIBILITY = [
    "//visibility:public",
]

DATA = [
    "//testcase:testcase",
]

COPTS = PTT_WARN + [
    "-Iinclude",
    "-I$(BINDIR)/include",
    "-I$(BINDIR)/common/fbs",
    LUACFLAGS,

    # "-Qunused-arguments",
    "-Wno-parentheses-equality",
    # "-fcolor-diagnostics",
    "-Wno-invalid-source-encoding",

    "-Itestutil",
    "-std=c++17",
]

LINKOPTS = [
    "-Os",
    "-Wl,--as-needed",
    "-Wl,--sort-common",

    LUALIBS,

    "-lstdc++",
    "-lncurses",
]

DEPS = [
    "register_test_h",

    "//testutil:testutil",
    "//mbbsd:mockmbbsdlib",
    "//mbbsd:mbbsdcxx",
    "@com_google_googletest//:gtest_main",
]

DEFINES = [
    "BBSHOME='\"$(BBSHOME)\"'",
]

cc_library(
    name = "register_test_h",
    hdrs = ["register_test.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "register_test1",
    srcs = [
        "register_test1.cc",
    ],
    tags = TAGS,
    visibility = VISIBILITY,
    linkstatic = True,
    data = DATA,
    copts = COPTS,
    linkopts = LINKOPTS,
    deps = DEPS,
    defines = DEFINES,
)

cc_test(
    name = "register_test2",
    srcs = [
        "register_test2.cc",
    ],
    tags = TAGS,
    visibility = VISIBILITY,
    linkstatic = True,
    data = DATA,
    copts = COPTS,
    linkopts = LINKOPTS,
    deps = DEPS,
    defines = DEFINES,
)

cc_test(
    name = "register_test3",
    srcs = [
        "register_test3.cc",
    ],
    tags = TAGS,
    visibility = VISIBILITY,
    linkstatic = True,
    data = DATA,
    copts = COPTS,
    linkopts = LINKOPTS,
    deps = DEPS,
    defines = DEFINES,
)

cc_test(
    name = "register_test4",
    srcs = [
        "register_test4.cc",
    ],
    tags = TAGS,
    visibility = VISIBILITY,
    linkstatic = True,
    data = DATA,
    copts = COPTS,
    linkopts = LINKOPTS,
    deps = DEPS,
    defines = DEFINES,
)


cc_test(
    name = "register_test5",
    srcs = [
        "register_test5.cc",
    ],
    tags = TAGS,
    visibility = VISIBILITY,
    linkstatic = True,
    data = DATA,
    copts = COPTS,
    linkopts = LINKOPTS,
    deps = DEPS,
    defines = DEFINES,
)

cc_test(
    name = "register_test6",
    srcs = [
        "register_test6.cc",
    ],
    tags = TAGS,
    visibility = VISIBILITY,
    linkstatic = True,
    data = DATA,
    copts = COPTS,
    linkopts = LINKOPTS,
    deps = DEPS,
    defines = DEFINES,
)

cc_test(
    name = "register_test7",
    srcs = [
        "register_test7.cc",
    ],
    tags = TAGS,
    visibility = VISIBILITY,
    linkstatic = True,
    data = DATA,
    copts = COPTS,
    linkopts = LINKOPTS,
    deps = DEPS,
    defines = DEFINES,
)

cc_test(
    name = "register_test8",
    srcs = [
        "register_test8.cc",
    ],
    tags = TAGS,
    visibility = VISIBILITY,
    linkstatic = True,
    data = DATA,
    copts = COPTS,
    linkopts = LINKOPTS,
    deps = DEPS,
    defines = DEFINES,
)

cc_test(
    name = "register_test10",
    srcs = [
        "register_test10.cc",
    ],
    tags = TAGS,
    visibility = VISIBILITY,
    linkstatic = True,
    data = DATA,
    copts = COPTS,
    linkopts = LINKOPTS,
    deps = DEPS,
    defines = DEFINES,
)

cc_test(
    name = "register_test11",
    srcs = [
        "register_test11.cc",
    ],
    tags = TAGS,
    visibility = VISIBILITY,
    linkstatic = True,
    data = DATA,
    copts = COPTS,
    linkopts = LINKOPTS,
    deps = DEPS,
    defines = DEFINES,
)

cc_test(
    name = "register_test12",
    srcs = [
        "register_test12.cc",
    ],
    tags = TAGS,
    visibility = VISIBILITY,
    linkstatic = True,
    data = DATA,
    copts = COPTS,
    linkopts = LINKOPTS,
    deps = DEPS,
    defines = DEFINES,
)

cc_test(
    name = "register_test14",
    srcs = [
        "register_test14.cc",
    ],
    tags = TAGS,
    visibility = VISIBILITY,
    linkstatic = True,
    data = DATA,
    copts = COPTS,
    linkopts = LINKOPTS,
    deps = DEPS,
    defines = DEFINES,
)

cc_test(
    name = "register_test34",
    srcs = [
        "register_test34.cc",
    ],
    tags = TAGS,
    visibility = VISIBILITY,
    linkstatic = True,
    data = DATA,
    copts = COPTS,
    linkopts = LINKOPTS,
    deps = DEPS,
    defines = DEFINES,
)

cc_test(
    name = "register_test35",
    srcs = [
        "register_test35.cc",
    ],
    tags = TAGS,
    visibility = VISIBILITY,
    linkstatic = True,
    data = DATA,
    copts = COPTS,
    linkopts = LINKOPTS,
    deps = DEPS,
    defines = DEFINES,
)

cc_test(
    name = "register_test36",
    srcs = [
        "register_test36.cc",
    ],
    tags = TAGS,
    visibility = VISIBILITY,
    linkstatic = True,
    data = DATA,
    copts = COPTS,
    linkopts = LINKOPTS,
    deps = DEPS,
    defines = DEFINES,
)
